Fixes: NB#287342 - Camera: The string §qtn_cam_color_filter_black_and_white§ and it's icon are overlapped.

--- a/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonbuttonstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonbuttonstyle.css
@@ -1997,9 +1997,9 @@ background-image:$CB_BG_ACCENT_INVERTED_DISABLED $CORNER_MARGINS;
 
 #CommonIconButton {
 /* px to mm is pending PPI adjustment */
-minimum-size:      64px 88px;
-preferred-size:    130px 88px;
-maximum-size:      130px 88px;
+minimum-size:      64px 92px;
+preferred-size:    130px 92px;
+maximum-size:      130px 92px;
 font:              $FONT_XSMALL;
 text-color:        $COLOR_SECONDARY_FOREGROUND;
 text-margin-top:   $MARGIN_MEDIUM;
@@ -2009,9 +2009,9 @@ text-margin-right: 1px;
 icon-size:         64px 64px;
 }
 #CommonIconButtonPlaceholder {
-minimum-size:      64px 88px;
-preferred-size:    130px 88px;
-maximum-size:      130px 88px;
+minimum-size:      64px 92px;
+preferred-size:    130px 92px;
+maximum-size:      130px 92px;
 background-image:  ;
 background-color:  ;
 margin-top:        0;
